# langchain-tool-server

./: README.md  openapi.json
.github/: CODEOWNERS
.github/workflows/: _integration_test.yml  _test.yml  ci.yml  publish.yml  release.yml
examples/: pyproject.toml
examples/auth/: async_client.py  server.py
examples/mcp/: client.py  server.py
examples/mcp/tools/: math_tools.py  text_tools.py  utility_tools.py
examples/react-agent/: agent.py  server.py
examples/simple/: async_client.py  server.py
libs/mcp-bridge/: pyproject.toml
libs/mcp-bridge/mcp_bridge/: __init__.py
libs/o2mcp/: pyproject.toml
libs/o2mcp/o2mcp/: __init__.py
libs/sdk-py/: README.md  pyproject.toml
libs/sdk-py/langchain_tool_client/: __init__.py
libs/sdk-py/open_tool_client/: __init__.py
libs/sdk-py/universal_tool_client/: __init__.py
libs/server/: Makefile  README.md  alembic.ini  pyproject.toml
libs/server/alembic/: env.py
libs/server/alembic/versions/: 001_create_tool_tables.py
libs/server/langchain_tool_server/: __init__.py  database.py  mcp.py  mcp_loader.py  models.py  tool.py  tools.py  version_routes.py
libs/server/open_tool_server/: __init__.py  tools.py
libs/server/tests/integration_tests/: test_mcp_integration.py  test_mcp_server.py  test_mock_mcp.py  test_real_mcp.py
libs/server/tests/server/: math_stdio_server.py  mock_mcp_server.py  tools_sse_server.py  weather_http_server.py  websocket_server.py
libs/server/tests/unit_tests/: test_auth.py  test_mcp.py  test_mcp_loader.py  (+5 more)
libs/server/universal_tool_server/: __init__.py  mcp.py  root.py  tools.py
(+8 files in other folders)
